fix movile horizontal scroll

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -19,6 +19,10 @@ html, body {
 }
 .page-wrap {
   min-height: 100%;
+  @include media-breakpoint-down(sm) {
+    max-width: 100vw;
+    overflow: hidden;
+  }
 }
 .page-wrap:after {
   content: "";
